--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ nav {
     height: 100px;
     padding: 10px;
 }
+img {
+    width: 50px;
+}
 
 .grid {
     padding: 20px;
@@ -34,6 +37,7 @@ nav {
 .parent.blackSection {
     background: black;
     text-align: center;
+    color: white;
 }
 .black-block {
     width: 400px;
@@ -41,3 +45,52 @@ nav {
     background-color: black;
     color: white;
 }
+
+.shaking {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
+
+/* Light mode */
+/* @media (prefers-color-scheme: light) {
+    body {
+        background-color: white;
+        color: black;
+    }
+} */
